third_party/rust/pin-project/tests/ui/pin_project/unpin_sneaky.stderr
error[E0412]: cannot find type `__S` in this scope
 --> tests/ui/pin_project/unpin_sneaky.rs:9:16
  |
9 | impl Unpin for __S {} //~ ERROR E0412,E0321
  |                ^^^ not found in this scope
